fixed text wrap and list alignment

--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,3 +1,18 @@
-.float-right {
-    text-align: right;
+.frame {
+    width:50%;
+    margin:0px
+}
+
+.delete {
+    margin-right:0;
+    margin-left:auto; 
+}
+
+.input-group-text {
+    white-space: normal !important;
+    text-align:left !important
+}
+
+.user-info {
+    font-size: 7vmin
 }
